[tool.poetry]
name = "putils"
version = "0.1.0"
description = "Utilities Library for Panthulhu"
authors = ["Sascha Can"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
